setting up views, templates and urls

--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+
+{% block content %}
 <h2> Expense list </h2>
 
 <ul class="list-group">
@@ -11,3 +13,5 @@
     <li class="list-group-item">buy cat</li>
 
 </ul>
+
+{% endblock%}
