--- a/templates/expenses/add_expense.html
+++ b/templates/expenses/add_expense.html
@@ -1,2 +1,5 @@
-{% extends "base.html" %}
-<h2>Add expenses </h2> 
+{% extends "base.html" %} 
+
+{% block content %}
+<h2>Add expenses</h2>
+{% endblock%}
