--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -1,57 +1,75 @@
 {% load static %}
-<ul class="nav flex-column">
+<nav class="col-md-2 d-none d-md-block bg-light sidebar">
+<div class="sidebar-sticky">
+  <ul class="nav flex-column">
     <li class="nav-item">
-      <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="#">
-        <svg class="bi"><use xlink:href="#house-fill"/></svg>
-        Dashboard
+      <a class="nav-link active" href="#">
+        <span data-feather="home"></span>
+        Dashboard <span class="sr-only">(current)</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link d-flex align-items-center gap-2" href="#">
-      expense
+      <a class="nav-link" href="{% url 'expenses' %}">
+        Expenses
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link d-flex align-items-center gap-2" href="#">
-        income
+      <a class="nav-link" href="#">
+        <span data-feather="shopping-cart"></span>
+        Income
       </a>
     </li>
- 
   </ul>
-
-  <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
-    <span>Summery</span>
-    <a class="link-secondary" href="#" aria-label="Add a new report">
-      <svg class="bi"><use xlink:href="#plus-circle"/></svg>
+  <h6
+  class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
+>
+  <span>Summary</span>
+  <a
+    class="d-flex align-items-center text-muted"
+    href="#"
+    aria-label="Add a new report"
+  >
+    <span data-feather="plus-circle"></span>
+  </a>
+</h6>
+<ul class="nav flex-column mb-2">
+  <li class="nav-item">
+    <a class="nav-link" href="#">
+      Expenses Summary
     </a>
-  </h6>
-  <ul class="nav flex-column mb-auto">
-    <li class="nav-item">
-      <a class="nav-link d-flex align-items-center gap-2" href="#">
-        Expenses Summery
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link d-flex align-items-center gap-2" href="#">
-        Income Summery
-      </a>
-    </li>
-    
-  </ul>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">
+      <span data-feather="file-text"></span>
+      Income Summary
+    </a>
+  </li>
+</ul>
 
-  <hr class="my-3">
-
-  <ul class="nav flex-column mb-auto">
-    <li class="nav-item">
-      <a class="nav-link d-flex align-items-center gap-2" href="#">
-        <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
-        Settings
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link d-flex align-items-center gap-2" href="#">
-        <svg class="bi"><use xlink:href="#door-closed"/></svg>
-        Sign out
-      </a>
-    </li>
-  </ul>
+<h6
+class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
+>
+<span>Settings</span>
+<a
+  class="d-flex align-items-center text-muted"
+  href="#"
+  aria-label="Add a new report"
+>
+  <span data-feather="plus-circle"></span>
+</a>
+</h6>
+<ul class="nav flex-column mb-2">
+<li class="nav-item">
+  <a class="nav-link" href="{% url 'preferences' %}">
+    General
+  </a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#">
+    <span data-feather="file-text"></span>
+    Account
+  </a>
+</li>
+</ul>
+</div>
+</nav>
