--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -41,7 +41,7 @@
   <table class="table table-stripped table-hover">
     <thead>
       <tr>
-        <th>Amount ({{currency}})</th>
+        <th>Amount (CURRENCY)</th>
         <th>Category</th>
         <th>Description</th>
         <th>Date</th>
@@ -78,7 +78,7 @@
       <table class="table table-stripped table-hover">
         <thead>
           <tr>
-            <th>Amount ({{currency}})</th>
+            <th>Amount (CURRENCY)</th>
             <th>Category</th>
             <th>Description</th>
             <th>Date</th>
@@ -119,5 +119,6 @@
 </div>
 
 <script src="{% static 'js/searchExpenses.js' %}"></script>
+
 
 {% endblock content %}
