--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -14,8 +14,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">
-        <span data-feather="shopping-cart"></span>
+      <a class="nav-link" href="{% url 'income' %}">
         Income
       </a>
     </li>
@@ -35,7 +34,7 @@
 <ul class="nav flex-column mb-2">
   <li class="nav-item">
     <a class="nav-link" href="#">
-      Expenses Summary
+      Icome Summary
     </a>
   </li>
   <li class="nav-item">
